# sancus-support

./: .gitignore  .vimrc  CMakeLists.txt
cmake/: CMakeLists.txt  GenerateSymtab.cmake  Sancus-SupportConfig.cmake.in
include/: CMakeLists.txt  elf.h  event_loop.h  global_symtab.h  pmem.h  ps2.h  sm_control.h  timer.h  tools.h  uart.h
include/sancus_support/: dma_attacker.h  event_loop.h  fileio.h  global_symtab.h  led_digits.h  link.h  packet.h  pmodcls.h  pmodkypd.h  ps2_hardware.h  sancus_step.h  sm_control.h  sm_io.h  spi.h  timer.h  tools.h  tsc.h  uart.h
include/sancus_support/private/: debug.h  symbol.h
src/: CMakeLists.txt
src/dev/: CMakeLists.txt  fileio.c  led_digits.c  pmodcls.c  pmodkypd.c  ps2.c  spi.c  timer.c  tsc.c  uart.c  uart_hardware.h
src/event-loop/: CMakeLists.txt  event_loop.c
src/link/: CMakeLists.txt  cobs.c  cobs.h  link.c
src/loader/: CMakeLists.txt  elf.c  global_symtab.c  global_symtab.h  pmem.c
src/main/: CMakeLists.txt  event_loop.c  link.ld  main.c  sm_control.c  spm_control.c  spm_control.h  tools.c  tools.h  upload_sm.py
src/malloc/: CMakeLists.txt  malloc.c
src/packet/: CMakeLists.txt  packet.c
src/sancus-step/: CMakeLists.txt  sancus_step.c
src/sm-control/: CMakeLists.txt  sm_control.c
src/sm-io/: CMakeLists.txt  sm_io.c
src/tools/: CMakeLists.txt  tools.c
tools/: CMakeLists.txt  generate-symtab.py
